--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
-
+h2{
+    text-align: center;
+}
 ul {
     list-style-type: none;
     margin: 0;
